<resources>
    <string name="app_name">Messy Words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="jugar">Jugar</string>
    <!-- Preference Titles -->
    <string name="messages_header">Ju</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ranking">Ranking</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="salir">Salir</string>
    <string name="perfil">Perfil</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="configuracion">Configuración</string>
    <string name="seleccionarNivel">Selecciona un nivel</string>
    <string name="anadirNivel">Añadir Nivel</string>
    <string name="localizacion">es</string>
    <string name="intentos">Intentos</string>
    <string name="puntuacion">Puntuación</string>
    <string name="escribePalabra">Escribe una palabra</string>
    <string name="anadir">Añadir</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="repetirContrasena">Repetir contraseña</string>
    <string name="anadirImagen">Añadir Imagen</string>
    <string name="volver">Volver</string>
    <string name="editar">Editar</string>
    <string name="preferencias">Preferencias</string>
    <string name="usuario">Usuario</string>
    <string name="idioma">Idioma</string>
    <string name="eligeIdioma" translatable="false">Elige un idioma</string>
    <string name="apariencia">Apariencia</string>
    <string name="castellano">Castellano</string>
    <string name="euskera">Euskera</string>
    <string name="tema">Tema</string>
    <string name="elegirApariencia">Elige la apariencia de la aplicación</string>
    <string name="elegirTema">Elige un tema</string>
    <string name="continuar">Continuar</string>
    <string name="hasGanado">¡Has ganado!</string>
    <string name="hasPerdido">Has perdido...</string>
    <string name="finPartida">Fin de la partida</string>
    <string name="eligeOpcion">¿Quieres seguir jugando?</string>
    <string name="menuNiveles">Menú de niveles</string>
    <string name="siguienteNivel">Siguiente nivel</string>
    <string name="seguroDeSalir">¿Estás segur@ de querer salir?</string>
    <string name="cancelar">Cancelar</string>
    <string name="seguroDeCerrarSesion">¿Seguro que quieres cerrar sesión?</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="cambiarUsuario">Cambiar usuario</string>
    <string name="puntuacionEs">Tu puntuación es:</string>
    <string name="registrateParaRanking">Regístrate para formar parte del ranking</string>
    <string name="pulsaMejora">Pulsa para mejorarla</string>
    <string name="palabrasRestantes">Palabras restantes</string>
    <string name="palabraErronea">No has acertado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruccionesTexto">Messy words es un juego de formar palabras. Consta de 14 niveles en los que hay que tratar de formar todas las palabras posibles con las letras proporcionadas. Según se vayan escribiendo palabras el juego indicará cuantas quedan por acertar. La partida termina al acertar todas las palabras o al terminarse los intentos del nivel.  Además, Messy Words permite llevar un ranking de las puntuaciones de distintos usuarios y así poder competir por ganar el primer puesto en el ranking.</string>
    <string name="pistas">Pistas</string>
    <string name="pista">Pista</string>
    <string name="comenzarRuta">Comenzar ruta</string>
    <string name="generarOtraRuta">Generar otra ruta</string>
    <string name="enhorabuenaDestino">Enhorabuena has llegado al destino</string>
    <string name="aceptar">Aceptar</string>
    <string name="tuCantidadDePistasEs">"Tu cantidad de pistas: "</string>
    <string name="planificaRutaParaPistas">Planifica y realiza una ruta en el mapa para sumar 10 pistas</string>
    <string name="necesarioIniciarSesion">Es necesario iniciar sesión para acceder a esta función</string>
    <string name="noPistas">No quedan pistas</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="palabrasAleatoriasEntrenamiento">Palabra aleatoria de entrenamiento para el juego:</string>
    <string name="contactoRepetido">Ya existe un contacto con ese nombre. ¿Quieres añadirlo con otro nombre?</string>
    <string name="contactoAñadido">Se ha creado un nuevo contacto con el nombre:</string>
    <string name="tiempoAgotado">¡Se ha acabado el tiempo!</string>
    <string name="anadirContactos">Añadir a contactos</string>
</resources>