<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="cat_idioma"
        app:title="@string/idioma">

        <ListPreference
            app:dialogTitle="@string/eligeIdioma"
            app:entries="@array/idioma"
            app:entryValues="@array/idioma"
            app:key="idioma"
            app:summary="@string/eligeIdioma"
            app:title="@string/idioma" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="apariencia"
        app:title="@string/apariencia">
        <ListPreference
            app:dialogTitle="@string/tema"
            app:entries="@array/elegirTema"
            app:entryValues="@array/elegirTema"
            app:key="tema"
            app:summary="@string/elegirTema"
            app:title="@string/tema" />

    </PreferenceCategory>
</PreferenceScreen>